<resources>
    <string name="app_name">Kafeteria Coffee</string>
    <string name="coffee0">ikona</string>

    <string-array name="options">
        <item>Drinks</item>
        <item>Cake</item>
        <item>Contact</item>
    </string-array>
    <string name="apple_pie">Apple pie</string>
    <string name="pear_cake">Pear cake</string>
    <string name="cost_apple_pie">15.00zł</string>
    <string name="cost_pear_pie">10.00zł</string>
    <string name="button_cake">-</string>
    <string name="text_one">0</string>
    <string name="button_cake_two">+</string>
    <string name="botton_menu">GO TO MENU</string>
    <string name="main_text_contact">CONTACT</string>
    <string name="place_coffee">KAFETERIA COFFEE</string>
    <string name="city">City Park Poznań</string>
    <string name="street">ul. Wyspiańskiego 50</string>
    <string name="PostCode">60-751 Poznań</string>
    <string name="reservation">Reservations and take-out orders:</string>
    <string name="telephone">+48 602 111 000</string>
    <string name="email_reservation">Restauracja@kafeteria.pl</string>
    <string name="hours">Opening hours:</string>
    <string name="days">Monday Friday</string>
    <string name="hours_opening">8:00 - 20:00</string>
    <string name="weekend">Saturday Sunday</string>
    <string name="weekend_closed">Closed</string>
    <string name="button_back_to_menu">Back</string>

</resources>